# Constaty

./: .gitignore  README.md  pyproject.toml
Frontend-React/: DESIGN.md  PRODUCT.md
Frontend-React/apps/api/: .env.example  requirements.txt  test_body.json
Frontend-React/apps/api/app/: config.py  main.py
Frontend-React/apps/api/app/api/: claims.py  health.py  submission.py  uploads.py
Frontend-React/apps/api/app/repositories/: claims.py
Frontend-React/apps/api/app/schemas/: claim.py  question.py  sinistre.py
Frontend-React/apps/api/app/services/: claim_validation.py  damage_analysis.py  document_extraction.py  gemini_client.py  pdf_generator.py  sinistre_service.py  storage.py  transcription.py
Frontend-React/apps/api/app/workflows/: claim_graph.py  claim_state.py  question_catalogue.py
Frontend-React/apps/api/app/workflows/nodes/: claim_nodes.py
Frontend-React/apps/storage/claims/claim_f22ba1dbe3/: audio_3d428c90.webm  audio_9f0dd0b6.webm
Frontend-React/apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/constaty_insurance/: crew.py  guardrails.py  main.py  models.py
src/constaty_insurance/config/: agents.yaml  tasks.yaml
src/constaty_insurance/tools/: __init__.py  bareme_tester_tool.py
