[project]
name = "constaty_insurance"
version = "0.1.0"
description = "Constaty insurance claim decision-support crew"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools,google-genai,litellm]>=1.15.4,<2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0"
]

[project.scripts]
run_crew = "constaty_insurance.main:run"
constaty_insurance = "constaty_insurance.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constaty_insurance"]
